bridge-firmwareOOP/debug.log
readFile.cpp: In function ‘int main()’:
readFile.cpp:26:12: error: invalid initialization of reference of type ‘std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&’ from expression of type ‘std::map<std::__cxx11::basic_string<char>, unsigned char>’
   26 |   checkMap(test1Map,test2Map);
      |            ^~~~~~~~
readFile.cpp:22:41: note: in passing argument 1 of ‘void checkMap(std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&, std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >&)’
   22 | void checkMap(std::map<string, string> &destMap, std::map<string, string> &srcMap); //forward declaration
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
readFile.cpp: In function ‘void readConfigFile()’:
readFile.cpp:42:3: error: ‘vector’ was not declared in this scope
   42 |   vector <string> lines;
      |   ^~~~~~
readFile.cpp:7:1: note: ‘std::vector’ is defined in header ‘<vector>’; did you forget to ‘#include <vector>’?
    6 | #include<map>
  +++ |+#include <vector>
    7 | 
readFile.cpp:42:17: error: expected primary-expression before ‘>’ token
   42 |   vector <string> lines;
      |                 ^
readFile.cpp:42:19: error: ‘lines’ was not declared in this scope
   42 |   vector <string> lines;
      |                   ^~~~~
readFile.cpp:52:26: error: ‘fileStream’ was not declared in this scope
   52 |      while (std::getline(fileStream, line))
      |                          ^~~~~~~~~~
readFile.cpp:54:41: error: variable ‘std::istringstream is_line’ has initializer but incomplete type
   54 |          std::istringstream is_line(line);
      |                                         ^
